--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,6 +9,18 @@
 <h1>My Recepies to try</h1>
 <p>Neki tekst za stranicu</p>
 
+<table>
+    <tr>
+        <th>ID</th>
+        <th>Description</th>
+    </tr>
+    <tr>
+        <tr th:each="recipe : ${recipes}">
+            <td th:text="${recipe.id}">123</td>
+            <td th:text="${recipe.description}">Goodness!!</td>
+    </tr>
+</table>
+
 
 </body>
 </html>
