--- a/src/main/resources/templates/recipe/show.html
+++ b/src/main/resources/templates/recipe/show.html
@@ -30,6 +30,8 @@
             <div class="pannel-group">
                 <div class="panel panel-primary">
                     <div class="panel-heading">
+                        <!-- Tell IntelliJ  what kind of variable is recipe so intelli sense can do auto complete -->
+                        <!--/*@thymesVar id="recipe" type="com.shorvat.recipe.domain.Recipe"*/-->
                         <h1 class="panel-title" th:text="${recipe.description}">Recipe Description Here!</h1>
                     </div>
                     <div class="panel-body">
@@ -84,7 +86,7 @@
                                 <h5>URL:</h5>
                             </div>
                             <div class="col-md-3">
-                                <p><a href="#" th:href="@{recipe.url}" >View Original</a></p>
+                                <p><a href="#" th:href="${recipe.url}" >View Original</a></p>
                             </div>
                         </div>
                     </div>
