--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -54,7 +54,7 @@
                                 <!--/*@thymesVar id="recipe" type="com.shorvat.recipe.domain.Recipe"*/-->
                                 <td th:text="${recipe.id}">3</td>
                                 <td th:text="${recipe.description}">Goodness 3!!</td>
-                                <td><a href="#" th:href="@{'recipe/show/' + ${recipe.id}}">View</a>
+                                <td><a href="#" th:href="@{'/recipe/' + ${recipe.id} + '/show'}">View</a>
                                 </td>
                             </tr>
                         </table>
