Added method for ingredients: * saveIngredientCommand() * updateRecipeIngredient() * SaveOrUpdate() * listAllUoms()
Form updated

Added tests

--- a/src/main/resources/templates/recipe/ingredient/show.html
+++ b/src/main/resources/templates/recipe/ingredient/show.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Show Recipe</title>
+    <title>Show Ingredient</title>
 
     <!-- Latest compiled and minified CSS -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet"
@@ -23,7 +23,7 @@
 <body>
 
 <!-- Tell IntelliJ  what kind of variable is recipe so intelli sense can do auto complete -->
-<!--/*@thymesVar id="recipe" type="com.shorvat.recipe.domain.Recipe"*/-->
+<!--/*@thymesVar id="ingredient" type="com.shorvat.recipe.domain.Ingredient"*/-->
 <div class="container-fluid" style="margin-top: 20px">
     <div class="row">
         <div class="col-md-6 col-md-offset-3">
